# trading-strategy

./: .env.example  .gitignore  .gitmodules  .pymon  CHANGELOG.md  LICENSE.txt  Makefile  README.md  environment.yml  package-lock.json  pyproject.toml  testscript.py
.github/workflows/: cloudflare-pages.yml  netlify.yml  no-optional-deps.yml  pip-install.yml  python-app.yml  rsync-docs.yml
capitalgram/: apikey.py  caip.py  candle.py  capitalgram.py  chain.py  client.py  exchange.py  liquidity.py  pair.py  reader.py  timebucket.py  types.py  units.py
capitalgram/analysis/: tradeanalyzer.py
capitalgram/environment/: base.py  colab.py  config.py  interactive_setup.py  jupyter.py
capitalgram/frameworks/: backtrader.py  fastquant.py  fastquant_monkey_patch.py  matplotlib.py  qstrader.py
capitalgram/transport/: base.py  cache.py  http.py
capitalgram/utils/: columnar.py  groupeduniverse.py  schema.py  summarydataframe.py
docs/: Makefile  proxy-index.html
docs/source/: _risks-and-legal.rst  algo-creators.rst  bot-baits.rst  conf.py  datasets.rst  development.rst  examples.rst  fee-structures.rst  getting-started.rst  glossary.rst  index.rst  installation.rst  investors.rst  learn.rst  risks-and-legal.rst  running.rst  troubleshooting.rst
docs/source/_static/: custom.css  doctools.js  plotly-shim-test.html
docs/source/_templates/: breadcrumbs.html  footer.html  layout.html
docs/source/algorithms/: ape-in.ipynb  entropy-monkey.ipynb  sushi-macaque.ipynb
docs/source/api/: caip.rst  candle.rst  chain.rst  client.rst  matplotlib.rst  pair.rst  timebucket.rst  types.rst
docs/source/examples/: 2020_03_09_lesson2_backtest_your_trading_strategy.ipynb  backtrader-integration.py.ipynb  backtrader.ipynb  block-level-analysis.ipynb  fastquant.ipynb  getting-started.ipynb  interactive-charts.ipynb  pairs.ipynb  (+5 more)
examples/: backtrader-random.py  backtrader-sma-example.py  fastquant-example.py
examples-python/: fastquant-example.py
experiement/: ape-in-tuning.ipynb
pyodide-tests/: README.md  test_pyodide_api_smoke_test.py
scripts/: data-waiter.py  download-coingecko-data.py  download-jsonl-candles-client.py  download-jsonl-candles-raw-api.py  download-lending-reserves.py  download-progress-bar.py  download-trades.py  download_progress_bar.py  download_progress_bar_test.py  fetch-binance-candles.py  liquidity-iterator-speed-test.py  load-token-metadata.py  meme-token-basket.py  pyarrow-vs-fastparquet-compare.py  repackage-vault-data.sh  run-pyodide-tests.sh  sparse_timeseries_aggregate.py.ipynb  standalone-test.sh  synthetic-real-time-candles.py  uniswap-v2-real-time-candles.py
scripts/dash-assets/: README.md  real-time-price-chart.css
tests/: GLD.csv  conftest.py  output_mode_test.ipynb  pytest.ini  standalone-check.py  test_aggregate_ohlcv.py  test_ape_in_backtrader.py  test_ape_in_latest.py  test_ape_in_qstrader.py  test_backtrader_integration.py  test_binance_data.py  test_caip.py  test_candle_data.py  test_candle_universe.py  test_capitalgram.py  test_charting.py  test_client.py  test_clmm.py  test_coingecko.py  test_double_7.py  test_double_77.py  test_entropy_monkey.py  test_exchange.py  test_exchange_universe.py  test_fastquant_integration.py  test_lending.py  test_liquidity_universe.py  test_memory_leak.py  test_no_opt_deps.py  test_pair_by_volume.py  test_pair_universe.py  test_pandas.py  test_price_impact.py  test_qstrader.py  test_resampled_liquidity_universe.py  test_slippage.py  test_stablecoin.py  test_token_metadata.py  test_top_pairs.py  test_trading_data_availability.py  (+4 more)
tests/binance/: test_binance_candle_data.py  test_binance_lending_data.py
tests/direct_feed/: test_currency_conversion.py  test_direct_feed_synthetic.py  test_filter_wick.py  test_ohclv.py  test_ohclv_resample.py  test_stores_trades.py  test_synthetic_candle_feed.py  test_synthetic_trade_feed.py  test_timeframe.py  test_uniswap_v2_direct_feed.py
tests/mock_client/: test_uniswap_v2_mock_client.py
tests/pyodide/: README.md  test_pyodide_api_smoke_test.py
tests/transport/: test_cache.py  test_pair_candle_cache.py
tests/unit_tests/: test_create_summary_table.py
tradingstrategy/: __init__.py  binance_data.py  caip.py  candle.py  chain.py  client.py  clmm.py  exceptions.py  exchange.py  lending.py  liquidity.py  pair.py  priceimpact.py  reader.py  stablecoin.py  timebucket.py  token.py  token_metadata.py  top.py  trade.py  tvl.py  types.py  universe.py  vault.py
tradingstrategy/alternative_data/: __init__.py  coingecko.py  vault-db.pickle.zstd  vault.py
tradingstrategy/analysis/: __init__.py  portfolioanalyzer.py  profitdistribution.py  tradeanalyzer.py  tradehint.py
tradingstrategy/binance/: __init__.py  candlestick.py  constants.py  downloader.py  lending_supply_rates.py  utils.py
tradingstrategy/charting/: __init__.py  candle_chart.py
tradingstrategy/data_bundles/: __init__.py  coingecko.json.zstd  preprocessed_backtest.py  vault-db.pickle.zstd  vault-metadata-db.pickle.zstd
tradingstrategy/direct_feed/: __init__.py  candle_feed.py  conversion.py  dash.py  direct_feed_pair.py  ohlcv_aggregate.py  ohlcv_producer.py  reorg_mon.py  reorgmon.py  store.py  synthetic_feed.py  timeframe.py  trade_feed.py  trade_store.py  uniswap_v2.py  warn.py
tradingstrategy/environment/: base.py  colab.py  config.py  default_environment.py  interactive_setup.py  jupyter.py  jupyterlite.py  pyodide_db.py
tradingstrategy/frameworks/: backtrader.py  matplotlib.py  qstrader.py
tradingstrategy/testing/: __init__.py  mock_client.py  uniswap_v2_mock_client.py
tradingstrategy/transport/: __init__.py  base.py  cache.py  cache_utils.py  data_trigger.py  jsonl.py  pair_candle_cache.py  pair_candle_metadata.py  progress_enabled_download.py  pyodide.py  token_cache.py
tradingstrategy/utils/: __init__.py  aggregate_ohlcv.py  df_index.py  flexible_pickle.py  format.py  forward_fill.py  gap.py  gap_detector.py  groupeduniverse.py  jupyter.py  liquidity_filter.py  logging_retry.py  pandas_backend.py  schema.py  summarydataframe.py  time.py  token_extra_data.py  token_filter.py  wrangle.py
(+50 files in other folders)
