[tool.poetry]
authors = ["Mikko Ohtamaa <mikko@tradingstrategy.ai>"]
description = "Algorithmic trading data for cryptocurrencies and DEXes like Uniswap, Aave and PancakeSwap"
homepage = "https://tradingstrategy.ai"
keywords = [
  "algorithmic trading",
  "ethereum",
  "aave",
  "arbitrum",
  "vault",
  "uniswap",
  "quantitative finance",
  "binance",
  "defi",
  "pancakeswap",
  "hyperliquid",
  "web3",
]
license = "AGPL"
name = "trading-strategy"
packages = [
  {include = "tradingstrategy"},
]
readme = "README.md"
repository = "https://github.com/tradingstrategy-ai/trading-strategy"
version = "0.28"

exclude = [
  # Don't include various blockchain icons in the release
  "tradingstrategy/chains/_data/icons",
  "./tradingstrategy/chains/_data/iconsDownload",
  "extras",
]

# See PyPi for supported links https://github.com/pypi/warehouse/blob/main/warehouse/templates/packaging/detail.html
# https://stackoverflow.com/a/74394591/315168
# https://pypi.org/project/links-demo/
[tool.poetry.urls]
Changelog = "https://github.com/tradingstrategy-ai/web3-ethereum-defi/blob/master/CHANGELOG.md"
Discord = "https://discord.gg/5M88m9nM8H"
Documentation = "https://tradingstrategy.ai/docs/"
Sponsor = "https://tradingstrategy.ai"
Twitter = "https://twitter.com/tradingprotocol"
Youtube = "https://www.youtube.com/@tradingstrategyprotocol"

[tool.poetry.dependencies]
dataclasses-json = "^0.5.4"
jsonlines = "^3.1.0"
numpy = "<3"
pandas = "<3"
plotly = ">=5.1.0"
pyarrow = ">=17.0.0"
python = ">=3.10,<4"
requests = "^2.28.1"
tqdm = "^4.61.2"
tqdm-loggable = ">=0.2"
web3-ethereum-defi = {version = ">=0.40", extras = ["data", "test", "web3v6"]}

# Legacy strategy and trading engines
coloredlogs = {version = "^15.0.1", optional = true}
filelock = "^3.12.4"
scipy = {version = "^1.6.1", optional = true}
trading-strategy-backtrader = {version = "^0.1", optional = true}
trading-strategy-qstrader = {version = "^0.5.0", optional = true}

# Needed for direct data feeds
dash = {version = "^2.7.1", optional = true}
orjson = "^3.10.11"
typer = {version = "^0.7.0", optional = true}

[tool.poetry.dev-dependencies]
coloredlogs = "^15.0.1"
ipdb = "^0.13.9"
memory-profiler = "^0.60.0"
poetry-core = "^1.1.0"
pytest = "7.1.3"
pytest-asyncio = "^0.19.0"
pytest-xdist = "^3.3.1"

[tool.poetry.extras]
# Real-time OHLCV feeds over JSON-RPC
direct-feed = ["web3-ethereum-defi", "typer", "dash"]

# Legacy qstrader framework support
qstrader = ["scipy", "trading-strategy-qstrader"]

# Legacy backtrader framework support
backtrader = ["trading-strategy-backtrader"]

[tool.poetry.group.dev.dependencies]
flaky = "^3.8.1"
importchecker = "^3.0"
pytest-timeout = "^2.4.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

# https://docs.pytest.org/en/6.2.x/customize.html
[tool.pytest.ini_options]
addopts = "-s --tb=native --timeout=240"
filterwarnings = [
  "ignore::FutureWarning",
  "ignore::DeprecationWarning",
]
testpaths = [
  "tests",
]
